# sharder

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.js.example  docker-compose.yml  gateway.exs  gateway.js  mix.exs  package-lock.json  package.json  tsconfig.json
src/: gateway.ts  main.rs
