[package]
name = "miki-gateway"
version = "0.1.0"
authors = ["my name <my@email.address>"]

[dependencies]
kankyo = "0.2.0"
futures-await = "0.1.1"
tokio = "0.1.7"
serenity = { git = "https://github.com/serenity-rs/serenity", rev="c8fbd1723a7905068149c5a7342856301393ab3f" }
lapin-futures = "0.13.0"
tungstenite = "0.5.4"
serde_json = "1.0.22"
env_logger = "0.5.10"
